Update match edit page and fix data_list links

--- a/views/data_list.erb
+++ b/views/data_list.erb
@@ -15,9 +15,9 @@
                             <% Match.select(col).where(:id => match.id).each do |val| %>
                                 <% val.each do |data| %>
                                     <% Match.select(data.first).where(:id => match.id).each do |v| %>
-                                        <% if index == 2 %>
+                                        <% if index >= 2 && col.to_s == "team_number" %>
                                             <th><a href="/competitions/<%= match.comp_id %>/teams/<%= match.team_number %>"><%= v[data.first] %></a></td>
-                                        <% elsif index > 2 %>
+                                        <% elsif index >= 2 %>
                                             <td><%= v[data.first].to_s.gsub(' ', '&nbsp;') %></td>
                                         <% end %>
                                     <% end %>
