--- a/views/new_match.erb
+++ b/views/new_match.erb
@@ -83,7 +83,7 @@
             <option value="" selected disabled hidden>Select Value</option>
             <option value="N/A">Don&#39;t shoot</option>
             <option value="hub wall">Against Hub</option>
-            <option value="tarmac">Near Trench</option>
+            <option value="tarmac">On Tarmac</option>
             <option value="against side walls">Against Side Walls</option>
             <option value="everywhere">Everywhere</option>
         </select>        
