Add tracking of fouls

--- a/views/match_edit.erb
+++ b/views/match_edit.erb
@@ -133,6 +133,9 @@
         <label>Played Defense</label>
         <textarea name="played_defense" rows="4" required><%= @match.played_defense %></textarea>
 
+        <label>Fouls</label>
+        <textarea name="fouls" rows="4"><%= @match.fouls %></textarea>
+
         <label>Notes</label>
         <textarea name="notes" rows="4"><%= @match.notes %></textarea>
 
