--- a/views/new_match.erb
+++ b/views/new_match.erb
@@ -151,6 +151,9 @@
         <label>Played Defense</label>
         <textarea name="played_defense" rows="4" placeholder="Did they play defense? How effectively? Did they stop other bots from shooting, intaking, or climbing?"></textarea>
 
+        <label>Fouls</label>
+        <textarea name="fouls" rows="4" placeholder="What fouls did they commit, if any?"></textarea>
+
         <label>Notes</label>
         <textarea name="notes" rows="4" placeholder="Write anything not covered in above questions such as robot breaking, fouls, yellow cards, etc."></textarea>
 
