--- a/public/css/css.css
+++ b/public/css/css.css
@@ -131,12 +131,26 @@ html {
     position: sticky;
     top: 0;
 }
-th:first-child {
+/*th:first-child {
     position: -webkit-sticky;
     position: sticky;
     left: 0;
     z-index: 2;
     background: #f9f9f9;
+}*/
+.sticky-col {
+    position: -webkit-sticky;
+    position: sticky;
+    left: 0;
+    z-index: 2;
+    background: #f9f9f9;
+}
+.sticky-col-2 {
+  position: -webkit-sticky;
+  position: sticky;
+  left: 112px;
+  z-index: 2;
+  background: #f9f9f9;
 }
 thead th:first-child {
     z-index: 5;
