Get second and third column to stick (freeze)

--- a/public/css/css.css
+++ b/public/css/css.css
@@ -102,7 +102,7 @@ html {
 .table-scroll {
     position: relative;
     width:100%;
-    height: 90vh;
+    height: calc(100vh - 20px);
     z-index: 1;
     margin: auto;
     overflow: scroll;
@@ -126,11 +126,12 @@ html {
     padding: 5px 10px;
     vertical-align: top;
 }
-.table-scroll thead th {
+.table-scroll th {
     position: -webkit-sticky;
     position: sticky;
     top: 0;
 }
+
 /*th:first-child {
     position: -webkit-sticky;
     position: sticky;
@@ -138,6 +139,24 @@ html {
     z-index: 2;
     background: #f9f9f9;
 }*/
+
+.stick-head {
+    position: -webkit-sticky;
+    position: sticky;
+    top: 0;
+    left: 0;
+    z-index: 5;
+}
+
+.stick-head-2 {
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0;
+  left: 112px;
+  z-index: 5;
+}
+
+/* Stick when scrolling left and down */
 .sticky-col {
     position: -webkit-sticky;
     position: sticky;
@@ -145,6 +164,8 @@ html {
     z-index: 2;
     background: #f9f9f9;
 }
+
+/* Stick to right of sticky-col element */
 .sticky-col-2 {
   position: -webkit-sticky;
   position: sticky;
