Fix stats for climbs and avg contribution

--- a/views/match_edit.erb
+++ b/views/match_edit.erb
@@ -126,7 +126,7 @@
         </select>   
 
         <label>Played Defense</label>
-        <textarea name="played_defense" rows="4" required><%= @match.played_defense %></textarea>
+        <textarea name="played_defense" rows="4"><%= @match.played_defense %></textarea>
 
         <label>Fouls</label>
         <textarea name="fouls" rows="4"><%= @match.fouls %></textarea>
