Add stats link in navbar

--- a/views/competition.erb
+++ b/views/competition.erb
@@ -21,4 +21,8 @@
 </div>
 <br>
 
+<script>
+    document.getElementById("stats-nav").href = "/competitions/<%= @competition.id %>/stats";
+</script>
+
 <%= erb :footer %>
