--- a/views/header.erb
+++ b/views/header.erb
@@ -57,6 +57,9 @@
                         <li>
                             <a href="/teams"> <i class="icon-list icon-black"></i> Team Lookup</a>
                         </li>
+                        <li>
+                            <a id="stats-nav" href="/competitions"> <i class="icon-list icon-black"></i> Stats</a>
+                        </li>
                     </ul>
                 </div>
             </div>
