--- a/views/header.erb
+++ b/views/header.erb
@@ -58,7 +58,7 @@
                             <a href="/teams"> <i class="icon-list icon-black"></i> Team Lookup</a>
                         </li>
                         <li>
-                            <a id="stats-nav" href="/competitions"> <i class="icon-list icon-black"></i> Stats</a>
+                            <a id="stats-nav" href="/stats"> <i class="icon-list icon-black"></i> Stats</a>
                         </li>
                     </ul>
                 </div>
